--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ link_type: text #text/icon
 google_scholar: https://scholar.google.com/citations?user=1MRupSUAAAAJ&hl=zh-CN
 
 # Images 
-avatar: https://img.yliu.me/LONG_Yuying.jpg
+avatar: ./assets/img/LONG_Yuying.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
