--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ google_scholar: https://scholar.google.com/citations?user=1MRupSUAAAAJ&hl=zh-CN
 
 # Images 
 avatar: ./assets/img/LONG_Yuying.jpg
-favicon: ./assets/img/favicon.png
-favicon_dark: ./assets/img/favicon-dark.png
+# favicon: ./assets/img/favicon.png
+# favicon_dark: ./assets/img/favicon-dark.png
 
 # The following files will be removed from the generated website.
 exclude:
