--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,16 +2,19 @@ main:
 
   - title: "Contact"
     url: ./#contact 
-    right: true 
+    # right: true 
 
   - title: "Services"
     url: ./#services
 
-  - title: "Talks"
-    url: ./#invited-talks
-
   - title: "Teaching"
     url: ./#teaching
+    
+  - title: "Honors"
+    url: ./#honors
+    
+  - title: "Talks"
+    url: ./#invited-talks
 
   - title: "Publications"
     url: ./#publications
