--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: ./#invited-talks
 
   - title: "Publications"
-    url: ./#publications
+    url: ./#Publications
 
   - title: "News"
     url: ./#news
