--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Basic Information 
-title: Yuying LONG     (龙玉莹)
+title: Yuying LONG
+(龙玉莹)
 position: Ph. D. student
 affiliation: The Hong Kong Polytechnic University
 email: yuying.long@connect.polyu.hk
